--- a/addresses/index.html
+++ b/addresses/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>World Affairs Conference</title>
+  <title>Addresses | The World Affairs Conference</title>
   <meta name="description" content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth.">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
@@ -39,7 +39,7 @@
       <li class="nav-item">
         <a class="nav-link" href="/keynote/">Keynote</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="/addresses/">Addresses</a>
       </li>
       <li class="nav-item">
@@ -74,13 +74,26 @@
     </div>
 
       <div class="container">
-  <center>
-    <div class="card card-body">
-      <h2>Error 404: URL Not Found</h2>
-      <h1>The page you're trying to visit is out of this world!</h1>
-      <h3><a href="/index.html">Maybe going back home will help you find your way.</a></h3>
-    </div>
-  </center>
+	<div class="card card-body mb-5">
+		<h1 class="text-center">Opening Address: The End of Protest</h1>
+		<h2 class="text-center">Micah White</h2>
+		<img class="img-fluid d-block mx-auto my-2 img-half rounded" src="/img/speakers/mwhite.jpg" alt="Micah White"/>
+		<p>
+			Is protest broken? Micah White, co-creator of Occupy Wall Street, thinks so. Disruptive tactics have failed to halt the rise of Donald Trump. Movements ranging from Black Lives Matter to environmentalism are leaving activists frustrated. Meanwhile, recent years have witnessed the largest protests in human history. Yet these mass mobilizations no longer change society. Now activism is at a crossroads: innovation or irrelevance. Is it time to consider a paradigm shift in our approach to protest? What does the future of protest look like?
+		</p>
+		<p>
+			Micah White, PhD is a public intellectual and lifelong activist who co-created Occupy Wall Street, a global social movement that spread to 82 countries, while an editor of Adbusters magazine. White's first book, The End of Protest: A New Playbook for Revolution, was published in 2016 by Knopf Canada. He has been a featured guest on major network television shows such as Bill Maher’s Politically Incorrect, the BBC's Newsnight and The National. In recognition of his contributions, Esquire has named him one of the most influential young thinkers alive today. Micah is currently a Fulani Fellow at the All Stars Project in New York City where he is working with Dr. Lenora Fulani, the first woman to run for president of the United States and get on the ballot in all 50 states. He is studying the revolutionary potential of electoral social movements.
+		</p>
+		<div class="pb-5">
+		</div>
+		<h1 class="text-center">Closing Address: Saving Civilization with Space Colonization </h1>
+		<h2 class="text-center">Joe Strout</h2>
+		<img class="img-fluid d-block mx-auto my-2 img-half rounded" src="/img/speakers/jstrout.jpg" alt="Joe Strout"/>
+		<p>
+			Joe Strout’s programming career began at a young age, writing articles for "Nibble" magazine in high school. Joe obtained a bachelors in psychology from the University of Miami and a masters in neuroscience from the University of California, San Diego, but couldn't resist the call of code and became a full-time software developer after graduate school. He now runs a consulting business, crafting unique software solutions to a wide range of problems, and has worked with his two sons to create High Frontier, a space settlement simulation game that uses real physics. Joe is also a long-time member of the National Space Society and a Senior Associate of the Space Studies Institute.
+		</p>
+		
+	</div>
 </div>
 
 
