--- a/contact/index.html
+++ b/contact/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>World Affairs Conference</title>
+  <title>Contact WAC | The World Affairs Conference</title>
   <meta name="description" content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth.">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
@@ -54,7 +54,7 @@
       <li class="nav-item">
         <a class="nav-link" href="/schedule/">Schedule</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="/contact/">Contact</a>
       </li>
     </ul>
@@ -74,13 +74,35 @@
     </div>
 
       <div class="container">
-  <center>
-    <div class="card card-body">
-      <h2>Error 404: URL Not Found</h2>
-      <h1>The page you're trying to visit is out of this world!</h1>
-      <h3><a href="/index.html">Maybe going back home will help you find your way.</a></h3>
+
+  <div class="card card-body">
+    <h1>Need to talk?</h1>
+    <p class="lead">The World Affairs Conference has staff ready to talk to you about anything, whether it's registration, conference information, or world affairs in general! If you'd like to contact us, you can check out all of the down below. We normally respond on social media and emails by the next business day.</p>
+  </div>
+  <div class="d-none d-md-block">
+    <div class="card-deck mt-2">
+      <div class="card card-body bg-danger card-inverse card-full">
+        <h2 class="card-title"><a class="contact-color" href="mailto:wac@ucc.on.ca"><span class="fa fa-fw fa-envelope"></span> wac@ucc.on.ca</a></h2>
+      </div>
+      <div class="card card-body bg-primary card-inverse card-full">
+        <h2 class="card-title"><a class="contact-color" href="https://www.facebook.com/worldaffairsconference/"><span class="fab fa-fw fa-facebook"></span> World Affairs Conference</a></h2>
+      </div>
     </div>
-  </center>
+    <div class="card-deck mt-2">
+      <div class="card card-body card-inverse bg-instagram card-full">
+        <h2 class="card-title"><a class="contact-color" href="https://instagram.com/WorldAffairsCon"><span class="fab fa-fw fa-instagram"></span> @WorldAffairsCon</a></h2>
+      </div>
+      <div class="card card-body bg-twitter card-inverse card-full">
+        <h2 class="card-title"><a class="contact-color" href="https://twitter.com/WorldAffairsCon"><span class="fab fa-fw fa-twitter"></span> @WorldAffairsCon</a></h2>
+      </div>
+    </div>
+  </div>
+  <div class="d-md-none mt-2">
+    <button type="button" class="btn btn-danger btn-lg btn-block"><a class="contact-color" href="mailto:wac@ucc.on.ca"><span class="fa fa-fw fa-envelope"></span> wac@ucc.on.ca</a></button>
+    <button type="button" class="btn btn-primary btn-lg btn-block"><a class="contact-color" href="https://www.facebook.com/worldaffairsconference/"><span class="fab fa-fw fa-facebook"></span> WAC</a></button>
+    <button type="button" class="btn btn-inverse bg-instagram btn-lg btn-block"><a class="contact-color" href="https://instagram.com/WorldAffairsCon"><span class="fab fa-fw fa-instagram"></span> @WorldAffairsCon</a></button>
+    <button type="button" class="btn btn-info btn-lg btn-block"><a class="contact-color" href="https://twitter.com/WorldAffairsCon"><span class="fab fa-fw fa-twitter"></span> @WorldAffairsCon</a></button>
+  </div>
 </div>
 
 
