--- a/schedule/index.html
+++ b/schedule/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>World Affairs Conference</title>
+  <title>WAC Schedule | The World Affairs Conference</title>
   <meta name="description" content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth.">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
@@ -51,7 +51,7 @@
       <li class="nav-item">
         <a class="nav-link" href="/staff/">Staff</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="/schedule/">Schedule</a>
       </li>
       <li class="nav-item">
@@ -74,13 +74,98 @@
     </div>
 
       <div class="container">
-  <center>
-    <div class="card card-body">
-      <h2>Error 404: URL Not Found</h2>
-      <h1>The page you're trying to visit is out of this world!</h1>
-      <h3><a href="/index.html">Maybe going back home will help you find your way.</a></h3>
+  <div class="card card-body">
+    <h1 class="text-center">WAC 2018 Schedule</h1>
+    <p class="text-center">(<a href="/files/schedule_2018.pdf">PDF copy</a>)</p>
+    <h2 class="text-center mt-2">Keynote Address</h2>
+    <div class="table-responsive">
+      <table class="table table-hover my-4">
+    	  <thead class="thead-dark">
+    	    <tr>
+    	      <th>Event</th>
+    	      <th>Time</th>
+    	      <th>Location</th>
+    	    </tr>
+    	  </thead>
+    	  <tbody>
+    	    <tr>
+    	      <td>Doors Open</td>
+    	      <td>6:30 to 7:00</td>
+    	      <td>Main Foyer</td>
+    	    </tr>
+    	    <tr>
+    	      <td>Address</td>
+    	      <td>7:00 to 8:00</td>
+    	      <td>Laidlaw Hall</td>
+    	    </tr>
+    	    <tr>
+    	      <td>Q&A Period</td>
+    	      <td>8:00 to 9:00</td>
+    	      <td>Laidlaw Hall</td>
+    	    </tr>
+    	  </tbody>
+    	</table>
     </div>
-  </center>
+    <h2 class="text-center">Conference Day</h2>
+    <div class="table-responsive">
+      <table class="table table-hover my-4">
+    	  <thead class="thead-dark">
+    	    <tr>
+    	      <th>Event</th>
+    	      <th>Time</th>
+    	      <th>Location</th>
+    	    </tr>
+    	  </thead>
+    	  <tbody>
+    	    <tr>
+    	      <td>Registration</td>
+    	      <td>8:30 to 9:00</td>
+    	      <td>Main Foyer</td>
+    	    </tr>
+    	    <tr>
+    	      <td>Opening Address</td>
+    	      <td>9:00 to 10:00</td>
+    	      <td>Laidlaw Hall</td>
+    	    </tr>
+    	    <tr>
+    	      <td>Break</td>
+    	      <td>10:00 to 10:10</td>
+    	      <td></td>
+    	    </tr>
+    	    <tr>
+    	      <td>First Session</td>
+    	      <td>10:10 to 11:15</td>
+    	      <td>Check your nametag for <a href="/plenaries">plenary</a> details</td>
+    	    </tr>
+    	    <tr>
+    	      <td>Break</td>
+    	      <td>11:15 to 11:25</td>
+    	      <td></td>
+    	    </tr>
+    	    <tr>
+    	      <td>Second Session</td>
+    	      <td>11:25 to 12:30</td>
+    	      <td>Check your nametag for <a href="/plenaries">plenary</a> details</td>
+    	    </tr>
+    	    <tr>
+    	      <td>Lunch</td>
+    	      <td>12:30 to 1:15</td>
+    	      <td>Lett Gym</td>
+    	    </tr>
+    	    <tr>
+    	      <td>Third Session</td>
+    	      <td>1:15 to 2:20</td>
+    	      <td>Check your nametag for <a href="/plenaries">plenary</a> details</td>
+    	    </tr>
+    	    <tr>
+    	      <td>Closing Address</td>
+    	      <td>2:30 to 3:30</td>
+    	      <td>Laidlaw Hall</td>
+    	    </tr>
+    	  </tbody>
+    	</table>
+    </div>
+  </div>
 </div>
 
 
