--- a/index.html
+++ b/index.html
@@ -1,7 +1,79 @@
----
-layout: default
----
-<div class="index-welcome">
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="author" content="The World Affairs Conference">
+
+  <title>World Affairs Conference</title>
+  <meta name="description" content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth.">
+
+  <link rel="icon" type="image/png" sizes="192x192"  href="img/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+  <link rel="stylesheet" href= "css/bootstrap.min.css">
+  <link rel="stylesheet" href= "css/style.css">
+  <script src="js/google_analytics.js"></script>
+  <script defer src="js/fontawesome-all.min.js"></script>
+  <style>
+		body{
+			background-image:url("img/earth.png"),url("img/stars.png");
+			background-repeat:no-repeat;
+		}
+	</style>
+</head>
+
+
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <a class="navbar-brand" href="/"><img class="nav-image" src="img/wac_logo_full.png" alt="WAC Logo"/></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="nav navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="keynote/index.html">Keynote</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="addresses/index.html">Addresses</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="plenaries/index.html">Plenaries</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="faq/index.html">FAQ</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="staff/index.html">Staff</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="schedule/index.html">Schedule</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact/index.html">Contact</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav float-lg-right">
+      <li class="nav-item">
+        <a class="btn btn-outline-primary" href="https://reg.world.ac" data-proofer-ignore>Register</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
+    <div class="container">
+      <div class="alert alert-info" role="alert">
+        Thanks for coming to WAC 2018! Watch VODs of our programs <a class="alert-link" href="https://www.facebook.com/worldaffairsconference">on our Facebook Page</a>!
+      </div>
+    </div>
+
+      <div class="index-welcome">
   <div class="container">
     <div class="text-center text-md-left">
       <h2>Welcome to the 2018</h2>
@@ -22,7 +94,7 @@ layout: default
   <div class="card card-body mt-3">
     <div class="row">
       <div class="col-sm-3">
-        <img class="img-fluid" src="{{site.baseurl}}/img/wac_logo.svg" alt="WAC Logo"/>
+        <img class="img-fluid" src="img/wac_logo.svg" alt="WAC Logo"/>
       </div>
       <div class="col-sm-9">
         <h4>What's WAC?</h4>
@@ -32,11 +104,11 @@ layout: default
         <p>
           This year, WAC 2018's theme is <b>Paradigm Shifts</b>: how have the axioms of society changed, and how will they change in the future? Some of our programs will include discussions on new innovative technologies, the ever-changing political landscape, and shifts in social policy and movements.
         </p>
-        <a class="card-link" href="{{site.baseurl}}/keynote/">Keynote</a>
-        <a class="card-link" href="{{site.baseurl}}/addresses/">Addresses</a>
-        <a class="card-link" href="{{site.baseurl}}/plenaries/">Plenaries</a>
-        <a class="card-link" href="{{site.baseurl}}/faq/">FAQ</a>
-        <a class="card-link" href="{{site.baseurl}}/contact/">Contact</a>
+        <a class="card-link" href="/keynote/">Keynote</a>
+        <a class="card-link" href="/addresses/">Addresses</a>
+        <a class="card-link" href="/plenaries/">Plenaries</a>
+        <a class="card-link" href="/faq/">FAQ</a>
+        <a class="card-link" href="/contact/">Contact</a>
       </div>
     </div>
   </div>
@@ -49,7 +121,7 @@ layout: default
   <div class="card card-body mt-3">
       <div class="row">
         <div class="col-sm-6">
-          <img class="img-fluid rounded" src="{{site.baseurl}}/img/speakers/hinton.png" alt="Keynote Speaker Geoffrey Hinton"/>
+          <img class="img-fluid rounded" src="img/speakers/hinton.png" alt="Keynote Speaker Geoffrey Hinton"/>
         </div>
         <div class="col-sm-6">
           <h3>Featured Speaker</h3>
@@ -73,7 +145,7 @@ layout: default
     </div>
     <div class="row pt-5">
       <div class="col-sm-3">
-        <img class="img-fluid" src="{{site.baseurl}}/img/snowden.png" alt="Edward Snowden"/>
+        <img class="img-fluid" src="img/snowden.png" alt="Edward Snowden"/>
       </div>
       <div class="col-sm-9">
         <h3>Edward Snowden</h3>
@@ -109,3 +181,29 @@ layout: default
   }, 1000);
   */
 </script>
+
+
+
+    <footer class="footer text-center mt-3">
+  <div class="container">
+    <p>
+      The World Affairs Conference website, made by the WAC team with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/world.ac" style="color:inherit;"><span class="fab fa-github"></span></a>
+    </p>
+    <p>
+      Have any questions or concerns? Check out <a class="white-icon" href="/faq/" style="text-decoration:underline;">our FAQ</a> or <a class="white-icon" href="/contact/" style="text-decoration:underline;">get in touch with us!</a>
+    </p>
+    <a href="mailto:wac@ucc.on.ca"><span class="fa fa-fw fa-2x fa-envelope white-icon"></span></a>
+    <a href="https://www.facebook.com/worldaffairsconference/"><span class="fab fa-fw fa-2x fa-facebook white-icon"></span></a>
+    <a href="https://instagram.com/WorldAffairsCon"><span class="fab fa-fw fa-2x fa-instagram white-icon"></span></a>
+    <a href="https://twitter.com/WorldAffairsCon"><span class="fab fa-fw fa-2x fa-twitter white-icon"></span></a>
+    <a href="https://github.com/worldaffairsconference/world.ac"><span class="fab fa-fw fa-2x fa-github white-icon"></span></a>
+  </div>
+</footer>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/tether.min.js></script>
+
+
+  </body>
+
+</html>
