--- a/plenaries/index.html
+++ b/plenaries/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="The World Affairs Conference">
 
-  <title>World Affairs Conference</title>
+  <title>Plenaries | The World Affairs Conference</title>
   <meta name="description" content="The website for the World Affairs Conference, Canada's oldest student-led current affairs conference that explores world issues relevant to youth.">
 
   <link rel="icon" type="image/png" sizes="192x192"  href="/img/android-icon-192x192.png">
@@ -42,7 +42,7 @@
       <li class="nav-item">
         <a class="nav-link" href="/addresses/">Addresses</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="/plenaries/">Plenaries</a>
       </li>
       <li class="nav-item">
@@ -74,13 +74,95 @@
     </div>
 
       <div class="container">
-  <center>
-    <div class="card card-body">
-      <h2>Error 404: URL Not Found</h2>
-      <h1>The page you're trying to visit is out of this world!</h1>
-      <h3><a href="/index.html">Maybe going back home will help you find your way.</a></h3>
-    </div>
-  </center>
+  <div class="card card-body">
+    <h1>Plenaries</h1>
+    <p class="card-text">More information on plenaries, including speakers, is coming soon!</p>
+  </div>
+  
+  <div class="card-deck mt-2">
+      <div class="card card-body">
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-fluid" src="/img/plen/china.png" alt="{plenary.title} picture"/>
+          </div>
+          <div class="col-sm-8">
+            <a href="/plenaries/china.html"><h4 class="card-title">China and Africa's New Era</h4></a>
+            <p class="card-text">Will the 21st century belong to China? How is China extending its influence in the developing world? How will it impact the rest of the world and its power dynamics?</p>
+          </div>
+        </div>
+      </div>
+  
+  
+  
+      <div class="card card-body">
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-fluid" src="/img/plen/crypto.svg" alt="{plenary.title} picture"/>
+          </div>
+          <div class="col-sm-8">
+            <a href="/plenaries/crypto.html"><h4 class="card-title">Cryptocurrencies: Friend or Foe</h4></a>
+            <p class="card-text">What are their benefits and harms? How have they changed commerce and transactions? How are countries and central banks evolving and even switching to cryptocurrencies?</p>
+          </div>
+        </div>
+      </div>
+  </div>
+  
+  <div class="card-deck mt-2">
+      <div class="card card-body">
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-fluid" src="/img/plen/drug.svg" alt="{plenary.title} picture"/>
+          </div>
+          <div class="col-sm-8">
+            <a href="/plenaries/drugs.html"><h4 class="card-title">Drug Legalization in a Progressive World</h4></a>
+            <p class="card-text">Societies are already legalizing marijuana at growing rates. Does this provide more harms than benefits? As well, this opens the debate to legalizing other drugs. Where should governments/societies draw the line?</p>
+          </div>
+        </div>
+      </div>
+  
+  
+  
+      <div class="card card-body">
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-fluid" src="/img/plen/earth.png" alt="{plenary.title} picture"/>
+          </div>
+          <div class="col-sm-8">
+            <a href="/plenaries/earth.html"><h4 class="card-title">The Global Food Crisis</h4></a>
+            <p class="card-text">What will we need to do to accommodate for a growing population on a planet with diminishing resources? GMO’s? New technology? Better policy?</p>
+          </div>
+        </div>
+      </div>
+  </div>
+  
+  <div class="card-deck mt-2">
+      <div class="card card-body">
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-fluid" src="/img/plen/feminism.png" alt="{plenary.title} picture"/>
+          </div>
+          <div class="col-sm-8">
+            <a href="/plenaries/feminism.html"><h4 class="card-title">The Changing Face of Feminism</h4></a>
+            <p class="card-text">How should the feminist movement act in order to progress? What needs development the most?</p>
+          </div>
+        </div>
+      </div>
+  
+  
+  
+      <div class="card card-body">
+        <div class="row">
+          <div class="col-sm-4">
+            <img class="img-fluid" src="/img/plen/nuclear.svg" alt="{plenary.title} picture"/>
+          </div>
+          <div class="col-sm-8">
+            <a href="/plenaries/nuclear.html"><h4 class="card-title">Nuclear Weapons: Obsolete or the Future</h4></a>
+            <p class="card-text">Are nuclear weapons still threats? Who should have access to them? How do they impact foreign relations and power dynamics?</p>
+          </div>
+        </div>
+      </div>
+  </div>
+  
 </div>
 
 
